compeleted product module 	openAPI specs with all required request and responses schemas, query params 	change the routes naming conventions
